@@ -24,7 +24,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Map;
@@ -117,7 +116,7 @@ public class DirectoryConfigProvider implements ConfigProvider {
 
     private static String read(Path path) {
         try {
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             log.error("Could not read file {} for property {}", path, path.getFileName(), e);
             throw new ConfigException("Could not read file " + path + " for property " + path.getFileName());
