@@ -20,10 +20,9 @@ import org.apache.kafka.common.Configurable;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -46,7 +45,7 @@ public class MirrorClientTest {
         }
 
         FakeMirrorClient() {
-            this(Collections.emptyList());
+            this(List.of());
         } 
 
         @Override
@@ -94,25 +93,25 @@ public class MirrorClientTest {
 
     @Test
     public void heartbeatTopicsTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "heartbeats",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "heartbeats",
             "source1.heartbeats", "source2.source1.heartbeats", "source3.heartbeats"));
         Set<String> heartbeatTopics = client.heartbeatTopics();
-        assertEquals(heartbeatTopics, new HashSet<>(Arrays.asList("heartbeats", "source1.heartbeats",
-            "source2.source1.heartbeats", "source3.heartbeats")));
+        assertEquals(heartbeatTopics, Set.of("heartbeats", "source1.heartbeats",
+            "source2.source1.heartbeats", "source3.heartbeats"));
     }
 
     @Test
     public void checkpointsTopicsTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "checkpoints.internal",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "checkpoints.internal",
             "source1.checkpoints.internal", "source2.source1.checkpoints.internal", "source3.checkpoints.internal"));
         Set<String> checkpointTopics = client.checkpointTopics();
-        assertEquals(new HashSet<>(Arrays.asList("source1.checkpoints.internal",
-            "source2.source1.checkpoints.internal", "source3.checkpoints.internal")), checkpointTopics);
+        assertEquals(Set.of("source1.checkpoints.internal",
+            "source2.source1.checkpoints.internal", "source3.checkpoints.internal"), checkpointTopics);
     }
 
     @Test
     public void replicationHopsTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "heartbeats",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "heartbeats",
             "source1.heartbeats", "source1.source2.heartbeats", "source3.heartbeats"));
         assertEquals(1, client.replicationHops("source1"));
         assertEquals(2, client.replicationHops("source2")); 
@@ -122,7 +121,7 @@ public class MirrorClientTest {
 
     @Test
     public void upstreamClustersTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "heartbeats",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "heartbeats",
             "source1.heartbeats", "source1.source2.heartbeats", "source3.source4.source5.heartbeats"));
         Set<String> sources = client.upstreamClusters();
         assertTrue(sources.contains("source1"));
@@ -138,7 +137,7 @@ public class MirrorClientTest {
     @Test
     public void testIdentityReplicationUpstreamClusters() throws InterruptedException {
         // IdentityReplicationPolicy treats heartbeats as a special case, so these should work as usual.
-        MirrorClient client = new FakeMirrorClient(identityReplicationPolicy("source"), Arrays.asList("topic1",
+        MirrorClient client = new FakeMirrorClient(identityReplicationPolicy("source"), List.of("topic1",
             "topic2", "heartbeats", "source1.heartbeats", "source1.source2.heartbeats",
             "source3.source4.source5.heartbeats"));
         Set<String> sources = client.upstreamClusters();
@@ -154,7 +153,7 @@ public class MirrorClientTest {
 
     @Test
     public void remoteTopicsTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "topic3",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "topic3",
             "source1.topic4", "source1.source2.topic5", "source3.source4.source5.topic6"));
         Set<String> remoteTopics = client.remoteTopics();
         assertFalse(remoteTopics.contains("topic1"));
@@ -168,7 +167,7 @@ public class MirrorClientTest {
     @Test
     public void testIdentityReplicationRemoteTopics() throws InterruptedException {
         // IdentityReplicationPolicy should consider any topic to be remote.
-        MirrorClient client = new FakeMirrorClient(identityReplicationPolicy("source"), Arrays.asList(
+        MirrorClient client = new FakeMirrorClient(identityReplicationPolicy("source"), List.of(
             "topic1", "topic2", "topic3", "heartbeats", "backup.heartbeats"));
         Set<String> remoteTopics = client.remoteTopics();
         assertTrue(remoteTopics.contains("topic1"));
@@ -181,10 +180,10 @@ public class MirrorClientTest {
 
     @Test
     public void remoteTopicsSeparatorTest() throws InterruptedException {
-        MirrorClient client = new FakeMirrorClient(Arrays.asList("topic1", "topic2", "topic3",
+        MirrorClient client = new FakeMirrorClient(List.of("topic1", "topic2", "topic3",
             "source1__topic4", "source1__source2__topic5", "source3__source4__source5__topic6"));
         ((Configurable) client.replicationPolicy()).configure(
-            Collections.singletonMap("replication.policy.separator", "__"));
+            Map.of("replication.policy.separator", "__"));
         Set<String> remoteTopics = client.remoteTopics();
         assertFalse(remoteTopics.contains("topic1"));
         assertFalse(remoteTopics.contains("topic2"));
@@ -197,7 +196,7 @@ public class MirrorClientTest {
     @Test
     public void testIdentityReplicationTopicSource() {
         MirrorClient client = new FakeMirrorClient(
-            identityReplicationPolicy("primary"), Collections.emptyList());
+            identityReplicationPolicy("primary"), List.of());
         assertEquals("topic1", client.replicationPolicy()
             .formatRemoteTopic("primary", "topic1"));
         assertEquals("primary", client.replicationPolicy()
@@ -211,8 +210,7 @@ public class MirrorClientTest {
 
     private ReplicationPolicy identityReplicationPolicy(String source) {
         IdentityReplicationPolicy policy = new IdentityReplicationPolicy();
-        policy.configure(Collections.singletonMap(
-            IdentityReplicationPolicy.SOURCE_CLUSTER_ALIAS_CONFIG, source));
+        policy.configure(Map.of(IdentityReplicationPolicy.SOURCE_CLUSTER_ALIAS_CONFIG, source));
         return policy;
     }
 }
