@@ -24,7 +24,7 @@ import java.util.Set;
  * The metadata associated with a regular expression in a Consumer Group.
  */
 public class ResolvedRegularExpression {
-    public static final ResolvedRegularExpression EMPTY = new ResolvedRegularExpression(Collections.emptySet(), -1L, -1L);
+    public static final ResolvedRegularExpression EMPTY = new ResolvedRegularExpression(Set.of(), -1L, -1L);
 
     /**
      * The set of resolved topics.
