@@ -25,10 +25,8 @@ import org.apache.kafka.test.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.OptionalInt;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.metalog.MockMetaLogManagerListener.COMMIT;
 import static org.apache.kafka.metalog.MockMetaLogManagerListener.LAST_COMMITTED_OFFSET;
@@ -141,7 +139,7 @@ public class LocalLogManagerTest {
 
             LocalLogManager activeLogManager = env.logManagers().get(leaderId);
             int epoch = activeLogManager.leaderAndEpoch().epoch();
-            List<ApiMessageAndVersion> messages = Arrays.asList(
+            List<ApiMessageAndVersion> messages = List.of(
                 new ApiMessageAndVersion(new RegisterBrokerRecord().setBrokerId(0), (short) 0),
                 new ApiMessageAndVersion(new RegisterBrokerRecord().setBrokerId(1), (short) 0),
                 new ApiMessageAndVersion(new RegisterBrokerRecord().setBrokerId(2), (short) 0));
@@ -152,7 +150,7 @@ public class LocalLogManagerTest {
             }
             List<MockMetaLogManagerListener> listeners = env.logManagers().stream().
                 map(m -> (MockMetaLogManagerListener) m.listeners().get(0)).
-                collect(Collectors.toList());
+                toList();
             env.close();
             for (MockMetaLogManagerListener listener : listeners) {
                 List<String> events = listener.serializedEvents();
