@@ -21,7 +21,6 @@ import org.apache.kafka.server.metrics.KafkaMetricsGroup;
 
 import com.yammer.metrics.core.Meter;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -45,6 +44,10 @@ public final class BrokerTopicMetrics {
     public static final String PRODUCE_MESSAGE_CONVERSIONS_PER_SEC = "ProduceMessageConversionsPerSec";
     public static final String REASSIGNMENT_BYTES_IN_PER_SEC = "ReassignmentBytesInPerSec";
     public static final String REASSIGNMENT_BYTES_OUT_PER_SEC = "ReassignmentBytesOutPerSec";
+    public static final String TOTAL_SHARE_FETCH_REQUESTS_PER_SEC = "TotalShareFetchRequestsPerSec";
+    public static final String FAILED_SHARE_FETCH_REQUESTS_PER_SEC = "FailedShareFetchRequestsPerSec";
+    public static final String TOTAL_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC = "TotalShareAcknowledgementRequestsPerSec";
+    public static final String FAILED_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC = "FailedShareAcknowledgementRequestsPerSec";
     // These following topics are for LogValidator for better debugging on failed records
     public static final String NO_KEY_COMPACTED_TOPIC_RECORDS_PER_SEC = "NoKeyCompactedTopicRecordsPerSec";
     public static final String INVALID_MAGIC_NUMBER_RECORDS_PER_SEC = "InvalidMagicNumberRecordsPerSec";
@@ -67,7 +70,7 @@ public final class BrokerTopicMetrics {
     }
 
     private BrokerTopicMetrics(Optional<String> name, boolean remoteStorageEnabled) {
-        this.tags = name.map(s -> Collections.singletonMap("topic", s)).orElse(Collections.emptyMap());
+        this.tags = name.map(s -> Map.of("topic", s)).orElse(Map.of());
 
         metricTypeMap.put(MESSAGE_IN_PER_SEC, new MeterWrapper(MESSAGE_IN_PER_SEC, "messages"));
         metricTypeMap.put(BYTES_IN_PER_SEC, new MeterWrapper(BYTES_IN_PER_SEC, "bytes"));
@@ -75,8 +78,12 @@ public final class BrokerTopicMetrics {
         metricTypeMap.put(BYTES_REJECTED_PER_SEC, new MeterWrapper(BYTES_REJECTED_PER_SEC, "bytes"));
         metricTypeMap.put(FAILED_PRODUCE_REQUESTS_PER_SEC, new MeterWrapper(FAILED_PRODUCE_REQUESTS_PER_SEC, "requests"));
         metricTypeMap.put(FAILED_FETCH_REQUESTS_PER_SEC, new MeterWrapper(FAILED_FETCH_REQUESTS_PER_SEC, "requests"));
+        metricTypeMap.put(FAILED_SHARE_FETCH_REQUESTS_PER_SEC, new MeterWrapper(FAILED_SHARE_FETCH_REQUESTS_PER_SEC, "requests"));
+        metricTypeMap.put(FAILED_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC, new MeterWrapper(FAILED_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC, "requests"));
         metricTypeMap.put(TOTAL_PRODUCE_REQUESTS_PER_SEC, new MeterWrapper(TOTAL_PRODUCE_REQUESTS_PER_SEC, "requests"));
         metricTypeMap.put(TOTAL_FETCH_REQUESTS_PER_SEC, new MeterWrapper(TOTAL_FETCH_REQUESTS_PER_SEC, "requests"));
+        metricTypeMap.put(TOTAL_SHARE_FETCH_REQUESTS_PER_SEC, new MeterWrapper(TOTAL_SHARE_FETCH_REQUESTS_PER_SEC, "requests"));
+        metricTypeMap.put(TOTAL_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC, new MeterWrapper(TOTAL_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC, "requests"));
         metricTypeMap.put(FETCH_MESSAGE_CONVERSIONS_PER_SEC, new MeterWrapper(FETCH_MESSAGE_CONVERSIONS_PER_SEC, "requests"));
         metricTypeMap.put(PRODUCE_MESSAGE_CONVERSIONS_PER_SEC, new MeterWrapper(PRODUCE_MESSAGE_CONVERSIONS_PER_SEC, "requests"));
         metricTypeMap.put(NO_KEY_COMPACTED_TOPIC_RECORDS_PER_SEC, new MeterWrapper(NO_KEY_COMPACTED_TOPIC_RECORDS_PER_SEC, "requests"));
@@ -84,7 +91,7 @@ public final class BrokerTopicMetrics {
         metricTypeMap.put(INVALID_MESSAGE_CRC_RECORDS_PER_SEC, new MeterWrapper(INVALID_MESSAGE_CRC_RECORDS_PER_SEC, "requests"));
         metricTypeMap.put(INVALID_OFFSET_OR_SEQUENCE_RECORDS_PER_SEC, new MeterWrapper(INVALID_OFFSET_OR_SEQUENCE_RECORDS_PER_SEC, "requests"));
 
-        if (!name.isPresent()) {
+        if (name.isEmpty()) {
             metricTypeMap.put(REPLICATION_BYTES_IN_PER_SEC, new MeterWrapper(REPLICATION_BYTES_IN_PER_SEC, "bytes"));
             metricTypeMap.put(REPLICATION_BYTES_OUT_PER_SEC, new MeterWrapper(REPLICATION_BYTES_OUT_PER_SEC, "bytes"));
             metricTypeMap.put(REASSIGNMENT_BYTES_IN_PER_SEC, new MeterWrapper(REASSIGNMENT_BYTES_IN_PER_SEC, "bytes"));
@@ -190,12 +197,28 @@ public final class BrokerTopicMetrics {
         return metricTypeMap.get(FAILED_FETCH_REQUESTS_PER_SEC).meter();
     }
 
+    public Meter failedShareFetchRequestRate() {
+        return metricTypeMap.get(FAILED_SHARE_FETCH_REQUESTS_PER_SEC).meter();
+    }
+
+    public Meter failedShareAcknowledgementRequestRate() {
+        return metricTypeMap.get(FAILED_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC).meter();
+    }
+
     public Meter totalProduceRequestRate() {
         return metricTypeMap.get(TOTAL_PRODUCE_REQUESTS_PER_SEC).meter();
     }
 
     public Meter totalFetchRequestRate() {
         return metricTypeMap.get(TOTAL_FETCH_REQUESTS_PER_SEC).meter();
+    }
+
+    public Meter totalShareFetchRequestRate() {
+        return metricTypeMap.get(TOTAL_SHARE_FETCH_REQUESTS_PER_SEC).meter();
+    }
+
+    public Meter totalShareAcknowledgementRequestRate() {
+        return metricTypeMap.get(TOTAL_SHARE_ACKNOWLEDGEMENTS_REQUESTS_PER_SEC).meter();
     }
 
     public Meter fetchMessageConversionsRate() {
